fix JavaFX warnings on newer JDKs